<resources>
    <string name="app_copyright" translatable="false">Copyright &#x24B8; 2026 by Walter Biselli (tournavigator@online.de)</string>
    <string name="app_donate">created with Tour Navigator (©2026 Walter Biselli, tournavigator@online.de, <a href="https://github.com/biselliw/Tour-Navigator/">https://github.com/biselliw/Tour-Navigator</a>)</string>
    <string name="app_name">Tour Navigator</string>
    <string name="app_web" translatable="false">https://github.com/biselliw/Tour-Navigator</string>
    <string name="app_short_description">Timetable of hiking tour</string>
    <string name="app_description">Timetable of hiking tour</string>
    <string name="app_description2">Timetable of hiking tour</string>
    <string name="app_author">Author</string>
    <string name="lang">en</string>
    <string name="notify_gps_active">Tour Navigator accesses your location in background</string>
    <string name="notify_gps_reason">The fine location is only required for tracking the time table of the tour</string>
    <string name="title_eula">End-user license agreement</string>
    <string name="app_eula" translatable="false">THIS SOFTWARE IS PROVIDED BY THE AUTHOR \'\'AS IS\'\' AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE AUTHOR BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
    </string>
    <string name="title_license">Open-source license</string>
    <string name="title_gplv2" translatable="false">GNU General Public License - Version 2 (GPLv2)</string>
    <string name="gnu_url" translatable="false">www.gnu.org/licenses</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="wait">Please wait ...</string>
    <string name="description">Description</string>
    <string name="action_main">Main</string>
    <string name="action_open_gpx">Open GPX</string>
    <string name="action_file_info">Tour Info</string>
    <string name="action_reverse_route">Reverse route</string>
    <string name="action_add_waypoints">Add waypoints</string>
    <string name="action_remote_waypoints">- from GPX file</string>
    <string name="action_osm_guideposts">- OpenStreetMap guide posts</string>
    <string name="action_osm_pois">- OpenStreetMap POIs</string>
    <string name="action_wikipedia">- Wikipedia</string>
    <string name="action_start_time">Start Time</string>
    <string name="action_timetable">Time Table</string>
    <string name="action_download_gpx">Save as GPX</string>
    <string name="action_download_html">Save as HTML</string>
    <string name="action_settings">Settings</string>
    <string name="action_help">Help</string>
    <string name="action_about">About</string>
    <string name="action_tutorial">Tutorial</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="load_gpx_file">Please load a GPX file</string>
    <string name="set_start_time">Please set the start time</string>
    <string name="permit_location">Please permit GPS fine location in app settings</string>
    <string name="activate_gps">Please activate GPS</string>
    <string name="wait_for_gps_fix">Waiting for GPS fix</string>
    <string name="gps_fix_lost">No GPS fix</string>
    <string name="wait_user_start">Let\'s start</string>
    <string name="goto_start_pos">Go To Start</string>
    <string name="on_track">Follow the track</string>
    <string name="return_to_track">Go back to the track</string>
    <string name="wait_gps">Waiting for GPS location</string>
    <string name="dest_reached">You reached the destination</string>
    <string name="dest_failed">You failed the destination!</string>
    <string name="pausing">"BREAK: Continue in "</string>
    <string name="pause_time">Break Time</string>
    <string name="comment_waypoint">Comment Waypoint</string>
    <string name="find_nearby_wikipedia">Find nearby Wikipedia</string>
    <string name="find_nearby_osm">Find nearby OSM POIs</string>
    <string name="nav_waypoint">Navigate to waypoint</string>
    <string name="nav_public_transport">Nearby public traffic stops</string>
    <string name="nav_swv_tourenportal" translatable="false">Zum Schwarzwaldverein Tourenportal</string>
    <string name="nav_google">Google-Navigate</string>
    <string name="action_set_new_start">Start from here</string>
    <string name="delete_waypoint">Remove Waypoint</string>
    <string name="delete_trackpoints">Remove all trackpoints to the end</string>
    <string name="help">Help</string>
    <string name="about">About</string>
    <string name="version_number">Version </string>
    <string name="about_author">Authors: </string>
    <string name="about_author_names" translatable="false">Walter Biselli</string>
    <string name="about_author_contributors">and contributors.</string>
    <string name="about_affiliation">In affiliation with</string>
    <string name="more_info">More information can be found on:</string>
    <string name="github" translatable="false"><a href="https://github.com/biselliw/tour_navigator/">Github-Repo</a></string>
    <string name="title_repositoy">Repository</string>
    <string name="source_repositoy">The source code of this app is available at GitHub: \nhttps://github.com/biselliw/tour_navigator/</string>
    <string name="title_add_licenses">Used Licenses</string>
    <string name="used_licenses">This app uses licensed content of these developers:</string>
    <string name="attribution" translatable="false">
        <ul>
            <li><b>Activity Workshop:</b>\n
        GpsPrune, a map-based cross-platform java application for viewing, editing and converting coordinate data from GPS systems:\n
        https://activityworkshop.net/software/gpsprune\n
        https://github.com/activityworkshop/GpsPrune\n
        Licensed under GNU General Public License v2.0.\n
        </li>
            <li><b>Forschungsgruppe SECUSO</b>\n
        (Security • Usability • Society)\n
        Karlsruher Institut für Technologie (KIT):\n
        Privacy Friendly Apps:\n
        https://secuso.org/pfa\n
        https://github.com/secuso\n
        Licensed under GNU General Public License v3.\n
        </li>
            <li><b>Nick Fellows (halfhp)</b>\n
        androidplot: Charts and plots for Android\n
        https://github.com/halfhp/androidplot\n
        Licensed under Apache License Version 2.0\n
        www.apache.org/licenses/LICENSE-2.0\n
        </li>
            <li><b>coltoscosmin</b>\n
        FileUtils:\n
        https://github.com/coltoscosmin/FileUtils/blob/master/FileUtils.java\n
        Copyright © 2018 OpenIntents.org\n
        Licensed under Apache License v2.0\n
        www.apache.org/licenses/LICENSE-2.0\n
        </li>
            <li><b>Google Design Material Icons</b>\n
        https://fonts.google.com/icons\n
        Licensed under Apache License Version 2.0\n
        www.apache.org/licenses/LICENSE-2.0\n
        </li>
        <li><b>Overpass API</b>\n
            web services to access OpenStreetMap (OSM) data\n
            https://overpass-api.de\n
            Licensed under Open Database License, "ODbL" 1.0\n
            https://osmfoundation.org/wiki/Licence\n
        </li>
        <li><b>GeoNames geographical database</b>\n
            web services to access OpenStreetMap data and Wikipedia articles\n
            www.geonames.org\n
            Licensed under Open Database License, "ODbL" 1.0\n
            Licensed under a Creative Commons Attribution 4.0 License\n
            https://creativecommons.org/licenses/by/4.0\n
        </li>
        </ul>
    </string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_header_general">General</string>
    <string name="pref_header_hiking_parameters">Hiking Parameters</string>
    <string name="pref_hiking_par_horSpeed">horizontal part in [m/h]</string>
    <string name="pref_hiking_par_speedClimb">ascending part in [hm/h]</string>
    <string name="pref_hiking_par_speedDescent">descending part in [hm/h]</string>
    <string name="pref_hiking_par_set_to_default">"Parameter was set to default value: "</string>
    <string name="pref_header_alarm_parameters">Alarms</string>
    <string name="pref_hiking_par_alarm">Notify when out of track</string>
    <string name="pref_hiking_par_alarm_summary">Signal leaving the track with vocational warning</string>
    <string name="pref_header_consent_parameters">Consents</string>
    <string name="consent">Consent</string>
    <string name="decline">Decline</string>
    <string name="consent_internet">Access to Internet services</string>
    <string name="consent_open_street_map">Access OpenStreetMap POIs</string>
    <string name="consent_open_street_map_policy">Tour Navigator uses the <a href="https://overpass-api.de">Overpass API</a> to access OpenStreetMap data.\n
        Accept the data policy of OpenStreetMap: <a href="https://osmfoundation.org/wiki/Privacy_Policy">https://osmfoundation.org/wiki/Privacy_Policy</a>.</string>
    <string name="consent_wikipedia">Access Wikipedia articles</string>
    <string name="consent_wikipedia_policy">You can only access the data provided by Wikipedia via database queries with your consent.
    \nThe Tour Navigator app uses the <b>GeoNames geographical database</b>:
    \n<a href="www.geonames.org\">www.geonames.org</a>.
    \nThe APIs does not have its own privacy policy.
        \nHowever, the Wikimedia Foundations privacy policy also applies
    \n<a href="https://foundation.wikimedia.org/wiki/Policy:Privacy_policy">https://foundation.wikimedia.org/wiki/Policy:Privacy_policy</a>.
        </string>
    <string name="consent_vmv">Access public transport stops</string>
    <string name="consent_vmv_policy">Tour Navigator uses the Journey Planner of <b>VMV - Verkehrsgesellschaft Mecklenburg-Vorpommern mbH</b> to access public transport stops and plan a journey:
    \n<a href="https://www.vmv-mbh.de/en">www.vmv-mbh.de/en</a>.
    \n\nAccept the data protection policy of Verkehrsgesellschaft Mecklenburg-Vorpommern mbH:
    \n<a href="https://www.vmv-mbh.de/en/datenschutz/">https://www.vmv-mbh.de/en/datenschutz/</a>.</string>
    <string name="consent_swv_tourenportal" translatable="false">Zugang zum Schwarzwaldverein Tourenportal</string>
    <string name="wpt_take_comment">Take It</string>
    <string name="btn_load">Load</string>
    <string name="btn_load_all">Load all</string>
    <string name="btn_show">Show</string>
    <string name="wikipedia_article_name">Article Name</string>
    <string name="wikipedia_article_show">Show article</string>
</resources>