<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:id="@+id/nav_group_main">
        <item
            android:id="@+id/nav_open_gpx"
            android:icon="@drawable/file_open"
            android:title="@string/action_open_gpx" />
        <item
            android:id="@+id/nav_file_info"
            android:icon="@drawable/description"
            android:title="@string/action_file_info" />
        <item
            android:id="@+id/nav_start_time"
            android:icon="@drawable/schedule"
            android:title="@string/action_start_time"/>
        <item
            android:id="@+id/nav_reverse_route"
            android:icon="@drawable/swap_horiz"
            android:title="@string/action_reverse_route" />
        <item
            android:id="@+id/nav_add_waypoints"
            android:icon="@drawable/signpost"
            android:title="@string/action_add_waypoints">
        <menu
            >
            <item
                android:id="@+id/nav_remote_waypoints"
                android:title="@string/action_remote_waypoints">
            </item>
            <item
                android:id="@+id/nav_osm_guideposts"
                android:title="@string/action_osm_guideposts">
            </item>
            <item
                android:id="@+id/nav_osm_pois"
                android:title="@string/action_osm_pois">
            </item>
            <item
                android:id="@+id/nav_wikipedia"
                android:title="@string/action_wikipedia">
            </item>
        </menu>

        </item>

    </group>

    <group android:id="@+id/nav_group_export">
        <item
            android:id="@+id/nav_timetable"
            android:icon="@drawable/table_rows"
            android:title="@string/action_timetable" />
        <item
            android:id="@+id/nav_download_gpx"
            android:icon="@drawable/file_save"
            android:title="@string/action_download_gpx" />
        <item
            android:id="@+id/nav_download_html"
            android:icon="@drawable/html"
            android:title="@string/action_download_html" />
    </group>

    <group android:id="@+id/nav_group_supp">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/settings"
            android:title="@string/action_settings" />
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/help"
            android:title="@string/action_help" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/info"
            android:title="@string/action_about" />
    </group>

</menu>
