<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group
        android:id="@+id/group_task_filter_modes"
        android:checkableBehavior="none">

        <item
            android:id="@+id/itm_pause_time"
            android:orderInCategory="1"
            android:title="@string/pause_time"
            app:showAsAction="never" />
        <item
            android:id="@+id/itm_delete_waypoint"
            android:orderInCategory="1"
            android:title="@string/delete_waypoint"
            app:showAsAction="never" />
        <item
            android:id="@+id/itm_nav_waypoint"
            android:orderInCategory="1"
            android:title="@string/nav_waypoint"
            app:showAsAction="never" />
        <item
            android:id="@+id/itm_nav_google"
            android:orderInCategory="1"
            android:title="@string/nav_google"
            app:showAsAction="never" />
        <item
            android:id="@+id/itm_copy_timetable"
            android:orderInCategory="1"
            android:title="@string/copy_timetable"
            app:showAsAction="never" />
    </group>
</menu>
