<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tvWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_description"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="?android:attr/textColorPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvLimitations"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/app_description2"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvWelcome" />

    <TextView
        android:id="@+id/tvEulaTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/title_eula"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvLimitations" />

    <TextView
        android:id="@+id/tvEula"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/app_eula"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textSize="12sp"
        android:textIsSelectable="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvEulaTitle" />

    <TextView
        android:id="@+id/tvLicense"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/title_license"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvEula" />

    <TextView
        android:id="@+id/tvGNU"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/title_gplv2"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="?android:attr/textColorLink"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvLicense" />

    <TextView
        android:id="@+id/tvGplV3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:text="@string/gnu_url"
        android:autoLink="web"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="?android:attr/textColorLink"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvGNU" />

    <TextView
        android:id="@+id/tvRepository"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/title_repositoy"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvGplV3" />

    <TextView
        android:id="@+id/tvSourceRepo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/source_repositoy"
        android:autoLink="web"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvRepository" />

    <TextView
        android:id="@+id/tvAddLicenses"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/title_add_licenses"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvSourceRepo" />

    <TextView
        android:id="@+id/tvUsedLicenses"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/used_licenses"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvAddLicenses" />

    <TextView
        android:id="@+id/tvAttribution"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/attribution"
        android:autoLink="web"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvUsedLicenses" />

</androidx.constraintlayout.widget.ConstraintLayout>
