<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Titel -->
    <TextView
        android:id="@+id/search_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/find_nearby_wikipedia"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textColor="@color/black"/>

    <!-- Status -->
    <TextView
        android:id="@+id/statusLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/wait"
        android:textSize="16sp"
        android:textColor="@color/black"/>

    <LinearLayout
        android:id="@+id/search_results"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <!-- RecyclerView -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_weight="10"
            android:minHeight="300dp"
            android:maxHeight="600dp"/>

        <!-- Divider -->
        <View
            android:id="@+id/divider1"
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="?attr/colorSurface"/>

        <!-- Description Title -->
        <TextView
            android:id="@+id/desc_search_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textColor="@color/black"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_weight="10"
            android:orientation="vertical"
            android:textColor="@color/black"
            tools:ignore="NestedWeights">

        <!-- Description Contents-->
        <TextView
            android:id="@+id/desc_search_result_view"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_weight="1"
            android:fadeScrollbars="true"
            android:fontFamily="serif"
            android:isScrollContainer="true"
            android:minHeight="45dp"
            android:scrollbarAlwaysDrawVerticalTrack="true"
            android:scrollbarStyle="insideOverlay"
            android:scrollbars="vertical"
            android:textSize="16sp"
            android:verticalScrollbarPosition="right"
            android:visibility="visible"
            android:textColor="@color/colorText"
            android:background="?attr/colorSurface" />
        </ScrollView>
    </LinearLayout>

    <!-- Button-Bar -->
    <LinearLayout
        android:id="@+id/buttonBar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:minHeight="50dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_load"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_load" />
        <Button
            android:id="@+id/btn_load_all"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_load_all" />
        <Button
            android:id="@+id/btn_show"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_show" />
        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel" />
    </LinearLayout>

</LinearLayout>
