<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:overScrollMode="always"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <TextView
        android:id="@+id/search_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        android:text="@string/wikipedia_articles_nearby"/>

    <TextView
        android:id="@+id/statusLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:text="@string/wait"/>

    <LinearLayout
        android:id="@+id/location_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TableLayout
            android:id="@+id/table_search_results"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="25dp">

            <TableRow
                android:id="@+id/table_row1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/search_result_name"
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:fontFamily="serif"
                    android:text="@string/wikipedia_article_name"
                    android:textColor="@color/black" />
                <TextView
                    android:id="@+id/search_result_distance"
                    android:layout_width="100dp"
                    android:textAlignment="viewEnd"
                    android:layout_height="25dp"
                    android:fontFamily="serif"
                    android:text="Entfernung"
                    android:textColor="@color/black"/>
            </TableRow>

            <View
                android:layout_width="match_parent"
                android:layout_height="3dip"
                android:background="#ff0000" />
        </TableLayout>

        <ListView
            android:id="@+id/search_result_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:layout_weight="2"
            android:longClickable="true"/>
    </LinearLayout>

    <TextView
        android:id="@+id/desc_search_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="16sp"
        android:text="@string/description"/>

    <TextView
        android:id="@+id/desc_search_result_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autoLink="web"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:scrollbarSize="5dp"
        android:scrollbars="vertical"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        android:verticalScrollbarPosition="right" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etComment" >

        <Button
            android:id="@+id/bt_load"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/wpt_take_comment" />
        <Button
            android:id="@+id/bt_show"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/wikipedia_article_show" />
        <Button
            android:id="@+id/bt_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel" />
    </LinearLayout>


</LinearLayout>