<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground">


<LinearLayout
        android:id="@+id/description_content"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="10"
        android:orientation="vertical"
        android:textColor="@color/black">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="OpenStreetMap" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10"
            android:orientation="vertical"
            android:textColor="@color/black"
            tools:ignore="NestedWeights">

            <TextView
                android:id="@+id/description_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoLink="web"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:text="@string/consent_open_street_map_policy"
                android:scrollbarSize="5dp"
                android:scrollbars="vertical"
                android:scrollbarAlwaysDrawVerticalTrack="true"
                android:verticalScrollbarPosition="right" />
        </ScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/bt_decline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/decline"/>
            <Button
                android:id="@+id/bt_consent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/consent"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>